--- a/src/components/css/Banner.css
+++ b/src/components/css/Banner.css
@@ -1,6 +1,7 @@
 .banner {
    display: flex;
    flex-direction: column;
+   text-align: center;
    justify-content: center;
    align-items: center;
    height: 100%;
