--- a/src/components/css/Content.css
+++ b/src/components/css/Content.css
@@ -1,6 +1,22 @@
-.content1 {
-   font-size: 20px;
-   padding: 20px;
-   float: left;
+.weather {
+   text-align: center;
+   justify-content: center;
+   display: flex;
+   align-items: center;
+}
+
+.weather1 {
+   justify-content: center;
+   align-items: center;
+   text-align: center;
    color: rgb(0, 102, 255);
+   padding: 20px;
+   display: flex;
+   font-size: 30px;
+}
+
+.weather2 {
+   justify-content: center;
+   align-items: center;
+   text-align: center;
 }
