--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
 .App {
-  text-align: center;
+   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.content {
+   color: rgb(0, 102, 255);
+   text-align: center;
+   justify-content: center;
+   align-items: center;
+   margin: 20px auto;
+   max-width: 1200px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header {
+   text-align: center;
+   justify-content: center;
+   color: rgb(0, 102, 255);
+   padding-bottom: 20px;
+   font-size: 36px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.table {
+   width: 100%;
+   margin: 0 auto;
+   padding: 20px;
+   border-collapse: collapse;
+   border: 1px solid rgb(0, 102, 255);
+   font-size: 20px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.table th,
+.table td {
+   padding: 12px 15px;
+   text-align: center;
+   border: 1px solid rgb(0, 102, 255);
 }
