--- a/src/components/css/Content.css
+++ b/src/components/css/Content.css
@@ -3,9 +3,13 @@
    justify-content: center;
    display: flex;
    align-items: center;
+   margin: 0 auto;
+   padding-top: 30px;
+   width: 100%;
 }
 
 .weather1 {
+   display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
@@ -13,10 +17,12 @@
    padding: 20px;
    display: flex;
    font-size: 30px;
+   margin: 0 auto;
 }
 
 .weather2 {
    justify-content: center;
    align-items: center;
    text-align: center;
+   margin: 0 auto;
 }
