--- a/src/components/css/Banner.css
+++ b/src/components/css/Banner.css
@@ -2,20 +2,25 @@
    display: flex;
    flex-direction: column;
    text-align: center;
+   margin: 0 auto;
    justify-content: center;
    align-items: center;
    height: 100%;
 }
 
 .banner .banner_form {
+   color: rgb(0, 102, 255);
    width: 400px;
    max-width: 100%;
    margin: 0 auto;
-   display: flex;
+   display: inline-block;
+   text-align: center;
    align-items: center;
 }
 
 .banner_msg {
    color: #fff;
    text-align: center;
+   align-items: center;
+   display: block;
 }
