--- a/src/components/css/Content.css
+++ b/src/components/css/Content.css
@@ -2,8 +2,8 @@
    text-align: center;
    justify-content: center;
    display: flex;
-   align-items: center;
    margin: 0 auto;
+   align-items: center;
    padding-top: 30px;
    width: 100%;
 }
@@ -18,6 +18,11 @@
    display: flex;
    font-size: 30px;
    margin: 0 auto;
+}
+
+.weather1 > img {
+   color: rgb(0, 102, 255);
+   display: flex;
 }
 
 .weather2 {
