--- a/src/components/css/Menu.css
+++ b/src/components/css/Menu.css
@@ -8,7 +8,7 @@ header {
 
 nav {
    width: 100%;
-   background-color: #ffffff;
+   background-color: #fff;
    height: 57px;
    z-index: 99999;
 }
